2012-07-06  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.14.0-rc2 Released.

	* AST-2012-010

	* AST-2012-011

	* Fix crash on a guest directmedia call

	  A sip_pvt may not have relatedpeer set if a call doesn't match up
	  with a peer.  If there is no relatedpeer, there is no direct media
	  ACL to apply, so just return that is is allowed.

	  (closes issue ASTERISK-20040)
	
	* Fix request routing issue when outboundproxy is used

	  Asterisk was incorrectly setting the destination of CANCELs and ACKs
	  for error responses to the URI of the initial INVITE.  This resulted
	  in further requests, such as INVITEs with authentication
	  credentials, to be routed incorrectly.  Instead when these CANCEL or
	  ACKs are to be esnt, we should simply keep the destination the same
	  as what it previously was.  There is no need to alter it any.

	  (closes issue ASTERISK-20008)
	
	* Fix monitoring calls put in a parking lot

	  Fix a regression that was introduced by r366167 which effectively
	  disabled monitoring parked calls.

	  (closes issue ASTERISK-20012)

2012-06-08  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 1.8.14.0-rc1 Released.

2012-06-06 21:27 +0000 [r368644]  Richard Mudgett <rmudgett@digium.com>

	* channels/chan_dahdi.c, channels/sig_analog.c: Fix POTS flash hook
	  to orignate a second call deadlock. A deadlock can occur when a
	  POTS phone tries to flash hook to originate a second call for
	  3-way or transfer. If another process is scanning the channels
	  container when the POTS line flash hooks then a deadlock will
	  occur. * Release the channel and private locks when creating a
	  new channel as a result of a flash hook. (closes issue
	  ASTERISK-19842) Reported by: rmudgett Tested by: rmudgett

2012-06-06 19:13 +0000 [r368625]  Mark Michelson <mmichelson@digium.com>

	* channels/chan_sip.c: Fix a specific scenario where ACKs are not
	  matched. If a dialog-starting INVITE contains a to-tag, then