@@ -1,1 +1,1 @@
-1.8.14.0-rc2
+1.8.14.0
